# MCREX

./: index.html  params.json
MAX_PROJECT/SIAM_Presentation/: Comments  LupoPasini_beamer.aux  LupoPasini_beamer.bbl  LupoPasini_beamer.blg  LupoPasini_beamer.nav  LupoPasini_beamer.out  LupoPasini_beamer.snm  LupoPasini_beamer.tex  LupoPasini_beamer.tex.backup  LupoPasini_beamer.toc  LupoPasini_beamer.vrb  library.bib  plots.m
MAX_PROJECT/current_code/: CLT.m  bayes_forward.m  halton.m  launch.m
MAX_reports/: abstract.odt
MAX_reports/CUDA_report/: CUDA_report.aux  CUDA_report.maf  CUDA_report.tex  CUDA_report.tex.backup  GPU_Code_report
MAX_reports/MC_solvers_article/: .gitignore  MCSA_diffreac.fig  MCSA_parabolic.fig  MCSA_poisson.fig  MC_solvers.aux  MC_solvers.bbl  MC_solvers.blg  MC_solvers.maf  MC_solvers.tex  MC_solvers.tex.backup  SEQ_diffreac.fig  SEQ_parabolic.fig  SEQ_poisson.fig  conclusion.tex  convergence.tex  intro.tex  library.bib  mcls.tex  results.tex
doc/NCState_seminar_2014/: Makefile  Profugus.pptx  binary_comm_tree.pdftex_t  ddnu_example.fig  emory_talk.vrb  msod_tally.pdftex_t  ncstate_seminar.tex
doc/acknowledge/: mxrex.txt
doc/coppermtn_polynomial/: CuMtn_2014.pptx
doc/ecp/: .gitignore  Makefile  generate_scaling.py  pres.tex  timeline.umd  transport_loop.fig
doc/emory_seminar_2014/: Makefile  emory_talk.tex  msod_construction.pdftex_t  msod_example.pdftex_t
doc/highlights/: Highlight_MCREX_20130415.pptx  doe_status.rst
doc/meetings/: Bi-Weekly Calls 2014.ipynb  Meeting_071814.ipynb
doc/mrb_mc/: mrb_data.xlsx
doc/ned2015/: Makefile  build_figs.sh  figures.tex  leakage_error.agr  leakage_error.eps  leakage_fraction.agr  leakage_fraction.eps  ned_cover_letter.docx  ned_title_page.docx  random_walk_error.agr  random_walk_error.eps  random_walk_length.agr  random_walk_length.eps  references.bib  response_to_reviewer.txt  slattery_wilson_evans.tex  spec_rad_results.agr  spec_rad_results.eps  stencil.fig  stencil_graph.fig
doc/nla/: algorithm2e.sty  mcsa.tex  nlaauth.cls
doc/polynomial_note/: Makefile  polynomial.tex  references.bib
doc/proposal/: DOE 4620_Tom Evans.xlsx  DOE 4620_Tom Evans_rev2.xlsx  FWP_ERKJ247_Evans.docx  LAB 12-742 Cover Page-ERKJ247.doc  LAB 12-742FWPNo_Evans Cover Letter.doc  Makefile  Revised_Budget.docx  Statement of Work – MCREX.docx  abstract.tex  bios.tex  budgets.tex  cnp.tex  effort.tex  emory.tex  facilities.tex  frontpage.tex  mcrex.xlsx  milestones.txt  mydef.sty  narrative.tex  notes.txt  ornl_proposal.sty  proposal.tex  references.bib  references_engelmann.bib  summary.docx  summary.txt  white.tex
doc/siam_cse_2015/: Makefile  binary_comm_tree.fig  domain_to_domain.pdftex_t  siam_cse_2015.tex
doc/ttsp2013/: block_jacobi.fig  block_jacobi.pdftex_t  block_jacobi_res.agr  block_jacobi_res.eps  block_jacobi_rich_res.agr  block_jacobi_rich_res.eps  estimator_convergence.eps  estimator_iters.eps  estimator_time.eps  references.bib  stencil.pdftex_t  ttsp_2013.tex
manuscript1/: paper.tex
model_problems/fs_680_1/: b.mtx  x.mtx
sphamil/mc_code/: AdditiveSchwarzWrapper.cc  AdditiveSchwarzWrapper.hh  AdjointMcKernel.hh  AdjointMcKernel.i.hh  BelosSolver.cc  BelosSolver.hh  CMakeLists.txt  ChebyshevIteration.cc  ChebyshevIteration.hh  ChebyshevPolynomial.cc  ChebyshevPolynomial.hh  DeviceTraits.hh  ForwardMcKernel.hh  ForwardMcKernel.i.hh  GmresPolynomial.cc  GmresPolynomial.hh  LinearSolverFactory.cc  LinearSolverFactory.hh  LinearSystem.cc  LinearSystem.hh  LinearSystemFactory.cc  LinearSystemFactory.hh  MCREX_Solver.cc  MCREX_Solver.hh  MCREX_Typedefs.hh  MC_Data.cc  MC_Data.hh  MonteCarloSolver.cc  MonteCarloSolver.hh  NeumannPolynomial.cc  NeumannPolynomial.hh  Polynomial.cc  Polynomial.hh  PolynomialBasis.cc  PolynomialBasis.hh  PolynomialFactory.cc  PolynomialFactory.hh  PolynomialPreconditioner.cc  PolynomialPreconditioner.hh  PolynomialUtils.cc  (+23 more)
sphamil/mc_code/gtest/: CMakeLists.txt
sphamil/mc_code/gtest/src/: gtest_main.cc
spn_dt/: A.mtx  dt_assbly_db.xml  dt_assbly_output.h5  dt_pwr_assbly.xml
(+492 files in other folders)
